
+++
*** sup-mouse.el.

*** terminal.el is obsolete; use term.el instead.

*** The previous version of todo-mode.el is obsolete and renamed otodo-mode.el.

*** xesam.el.

+++
*** yow.el is obsolete; use fortune.el or cookie1.el instead.

---
*** The Info-edit command is obsolete.  Editing Info nodes by hand
has not been relevant for some time.


* New Modes and Packages in Emacs 24.4

** New `superword-mode' in subword.el
`superword-mode' overrides the default word motion commands to treat
symbol_words as a single word, similar to what `subword-mode' does and
using the same internal functions.

** New nadvice.el package offering lighter-weight advice facilities.
It is layered as:
- add-function/remove-function which can be used to add/remove code on any
  function-carrying place, such as process-filters or `<foo>-function' hooks.
- advice-add/advice-remove to add/remove a piece of advice on a named function,
  much like `defadvice' does.

** The package file-notify.el provides an interface for file system
notifications.  It requires, that Emacs is compiled with one of the
low-level libraries gfilenotify.c, inotify.c or w32notify.c.


* Incompatible Lisp Changes in Emacs 24.4

** The syntax of ?» and ?« is now punctuation instead of matched parens.
Some languages match those as »...« and others as «...» so better stay neutral.

** The default file coding for Emacs Lisp files is now utf-8.
(See file-coding-system-alist.)  In most cases, this change is transparent, but
files that contain unusual characters without specifying an explicit coding
system may fail to load with obscure errors.
You should either convert them to utf-8 or add an explicit `coding:' cookie.

** overriding-terminal-local-map does not replace the local keymaps any more.
It used to disable the minor mode, major mode, and text-property keymaps,
whereas now it simply has higher precedence.

** Default process filters and sentinels are not nil any more.